# GeoDatasSkills

./: .gitignore  README.md  pyproject.toml
examples/: ingest_demo.py  sample_city.json  sample_geojson.json  sample_modalities.csv  sample_nearest_modalities.csv  sample_nested.json  sample_open_polygon.wkt  sample_points.csv  sample_polygon.wkt  sample_rules.json  sample_tileset.json  sample_track.gpx  sample_trajectory.json
src/geodataskills/: __init__.py  attributes.py  cli.py  coordinates.py  detection.py  fields.py  geometry.py  gpx.py  modality.py  models.py  normalize.py  output.py  parsers.py  professional.py  quality.py  rules.py  schema.py  skill.py  timeutils.py  visualization.py  wkt.py
tests/: test_governance_unittest.py  test_modality_output_unittest.py  test_professional_visualization_unittest.py  test_rules_unittest.py  test_schema_quality_unittest.py  test_skill.py  test_spatial_variants_unittest.py
